# kubereport

./: .gitignore  LICENSE  README.md
aggregator/aggregator/: main.py  pyproject.toml  requirements.txt
controller/controller/: main.py  pyproject.toml
dev/: spreadsheet-sample.yaml
dev/aggregator/: aggregator_clusterrolebinding.yaml  aggregator_deployment.yaml  aggregator_serviceaccount.yaml  aggregator_svc.yaml
dev/controller/k8s/crd/: spreadsheet-crd.yaml
dev/controller/k8s/deploy/: controller_deployment.yaml
dev/controller/k8s/rbac/: role-binding.yaml  service-account.yaml
dev/formatter/: formatter_deployment.yaml  formatter_svc.yaml
dev/minio/: minio.yaml
docs/: add_resource.md  build_kpack.md  install_kubereport.md  use_kubereport.md
docs/image/: kubereport_architecture_20231102.pptx
formatter/formatter/: app.py  pyproject.toml
