[tool.poetry]
name = "formatter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
openpyxl = "^3.0.9"
requests = "^2.27.1"
Jinja2 = "^3.1.2"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
boto3 = "^1.26.113"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
